<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="trailblazelearn.nus.edu.sg.trailblazelearn.activity.AddLearningTrailActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:visibility="gone" />

    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            >

            <TextView
                android:id="@+id/textTrailName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trail_name"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:paddingLeft="4dp"
                />
            <EditText
                android:id="@+id/addTrailName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_below="@id/textTrailName"
                android:hint="@string/hint_trail_name"
                />

            <TextView
                android:id="@+id/text_trail_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trail_id_name"
                android:layout_below="@id/addTrailName"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:paddingLeft="4dp"
                />
            <EditText
                android:id="@+id/addTrailID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/hint_trail_id_name"
                android:layout_below="@id/text_trail_id"
                />

            <TextView
                android:id="@+id/text_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_below="@id/addTrailID"
                android:paddingLeft="4dp"
                />
            <EditText
                android:id="@+id/addUserID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_below="@id/text_user_name"
                android:hint="@string/user_name_hint"
                />

            <TextView
                android:id="@+id/text_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_date"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_below="@id/addUserID"
                android:paddingLeft="4dp"
                />
            <EditText
                android:id="@+id/addTrailDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_below="@id/text_date"
                android:singleLine="true"
                android:hint="Date and time"
                />
            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="20dp"
                android:background="@color/colorPrimary"
                android:text="@string/save"
                android:layout_below="@id/addTrailDate"
                android:textColor="@android:color/white"
                />


        </RelativeLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
